adicionar funcao de cadastro de ocupacoes de cargo - BASIS-220351

--- a/frontend/src/app/seguranca/components/ocupacoes-de-cargo/ocupacoes-de-cargo.component.html
+++ b/frontend/src/app/seguranca/components/ocupacoes-de-cargo/ocupacoes-de-cargo.component.html
@@ -33,7 +33,7 @@
             <div class="p-col-12 p-grid">
                 <div class="p-md-3 p-sm-12">
                     <span class="p-float-label">
-                        <p-dropdown [(ngModel)]="cargoTeste" [options]="cargos" [optionLabel]="'descricao'" [optionValue]="'id'"></p-dropdown>
+                        <p-dropdown formControlName="cargoId" [options]="cargos" [optionLabel]="'descricao'" [optionValue]="'id'"></p-dropdown>
                         <label>Cargos</label>
                     </span>
                 </div>
