Corrigir posiçao do botao Exportar - BASIS-220348

--- a/frontend/src/app/exames/components/solicitar-exame/solicitar-exame.component.html
+++ b/frontend/src/app/exames/components/solicitar-exame/solicitar-exame.component.html
@@ -94,7 +94,7 @@
                         Paciente utiliza antimicrobianos a mais de 24 horas:
                         <div style="margin-top: 5px; margin-bottom: 10px;">
                             <p-radioButton name="usoAntimicrobianos24h" value=true
-                                label="Sim" formControlName="usoAntimicrobianos24h">
+                                label="Sim" formControlName="usoAntimicrobianos24h" class="separator-radio">
                             </p-radioButton>
 
                             <p-radioButton name="usoAntimicrobianos24h" value=false
@@ -105,7 +105,7 @@
                         Pedido para 1° exame ou comparativo:
                         <div style="margin-top: 5px; margin-bottom: 10px;" [formGroup]="solicitarExame">
                             <p-radioButton name="pedidoPrimeiroExame" value=true
-                                label="1º Exame" formControlName="pedidoPrimeiroExame">
+                                label="1º Exame" formControlName="pedidoPrimeiroExame" class="separator-radio">
                             </p-radioButton>
 
                             <p-radioButton
