adicionar titulo no cadastro de cargo - BASIS-220352

--- a/frontend/src/app/seguranca/components/cargos/cargos.component.html
+++ b/frontend/src/app/seguranca/components/cargos/cargos.component.html
@@ -4,7 +4,7 @@
     <div class="card">
         <div class="p-col-12 p-grid">
             <div class="p-md-12">
-                <h2 class="sub-title">Cadastrar Ocupações do Cargo</h2>
+                <h2 class="sub-title">Cadastrar Cargo</h2>
 
                 <div class="p-col-12 p-grid">
                     <div class="p-col-12 p-md-4">
