--- a/frontend/src/app/seguranca/components/cargos/cargos.component.html
+++ b/frontend/src/app/seguranca/components/cargos/cargos.component.html
@@ -1,4 +1,4 @@
-<h1>Cargos</h1>
+<h1>Segurança</h1>
 
 <form #form [formGroup]="formCargo" (ngSubmit)="submit()">
     <div class="card">
@@ -12,7 +12,7 @@
                             <input type="text" pInputText formControlName="codigo" />
                             <label>Código</label>
                         </span>
-                        <p-message severity="error" text="Código do vínculo obrigatório" *ngIf="
+                        <p-message severity="error" text="Código do cargo obrigatório" *ngIf="
                             formCargo.controls['codigo'].errors?.required &&
                             formCargo.controls['codigo'].touched">
                         </p-message>
@@ -22,7 +22,7 @@
                             <input type="text" pInputText formControlName="descricao" />
                             <label>Descrição</label>
                         </span>
-                        <p-message severity="error" text="Descrição do vínculo obrigatório" *ngIf="
+                        <p-message severity="error" text="Descrição do cargo obrigatório" *ngIf="
                             formCargo.controls['descricao'].errors?.required &&
                             formCargo.controls['descricao'].touched">
                         </p-message>
@@ -33,7 +33,7 @@
                             </p-dropdown>
                             <label>Situação</label>
                         </span>
-                        <p-message severity="error" text="Situação do vínculo obrigatório" *ngIf="
+                        <p-message severity="error" text="Situação do cargo obrigatório" *ngIf="
                             formCargo.controls['situacao'].errors?.required &&
                             formCargo.controls['situacao'].touched">
                         </p-message>
@@ -42,7 +42,7 @@
             </div>
         </div>    
         <div class="p-grid p-jc-end">
-            <button pButton type="submit" label="Salvar" pTooltip="Salvar registro de servidor"
+            <button pButton type="submit" label="Salvar" pTooltip="Salvar registro de cargo"
                 [disabled]="!valid()">
             </button>
         </div>
