--- a/frontend/src/app/seguranca/components/ocupacoes-de-cargo/ocupacoes-de-cargo.component.html
+++ b/frontend/src/app/seguranca/components/ocupacoes-de-cargo/ocupacoes-de-cargo.component.html
@@ -1,4 +1,4 @@
-<h1>Cargos</h1>
+<h1>Segurança</h1>
 
 <form #form [formGroup]="formOcupacoesDeCargo" (ngSubmit)="submit()">
     <div class="card">
@@ -7,22 +7,22 @@
                 <h2 class="sub-title">Cadastrar Ocupações do Cargo</h2>
 
                 <div class="p-col-12 p-grid">
-                    <div class="p-col-12 p-md-4">
+                    <div class="p-col-12 p-md-6">
                         <span class="p-float-label">
                             <input type="text" pInputText formControlName="codigo" />
                             <label>Código</label>
                         </span>
-                        <p-message severity="error" text="Código do vínculo obrigatório" *ngIf="
+                        <p-message severity="error" text="Código da ocupação obrigatório" *ngIf="
                             formOcupacoesDeCargo.controls['codigo'].errors?.required &&
                             formOcupacoesDeCargo.controls['codigo'].touched">
                         </p-message>
                     </div>
-                    <div class="p-col-12 p-md-4">
+                    <div class="p-col-12 p-md-6">
                         <span class="p-float-label">
                             <input type="text" pInputText formControlName="descricao" />
                             <label>Descrição</label>
                         </span>
-                        <p-message severity="error" text="Descrição do vínculo obrigatório" *ngIf="
+                        <p-message severity="error" text="Descrição da ocupação obrigatória" *ngIf="
                             formOcupacoesDeCargo.controls['descricao'].errors?.required &&
                             formOcupacoesDeCargo.controls['descricao'].touched">
                         </p-message>
@@ -31,19 +31,19 @@
             </div>
             
             <div class="p-col-12 p-grid">
-                <div class="p-md-3 p-sm-12">
+                <div class="p-col-12 p-md-6">
                     <span class="p-float-label">
                         <p-dropdown formControlName="cargoId" [options]="cargos" [optionLabel]="'descricao'" [optionValue]="'id'"></p-dropdown>
                         <label>Cargos</label>
                     </span>
                 </div>
-                <div class="p-col-12 p-md-4">
+                <div class="p-col-12 p-md-6">
                     <span class="p-float-label">
                         <p-dropdown [options]="situacaoDoServidor" formControlName="situacao">
                         </p-dropdown>
                         <label>Situação</label>
                     </span>
-                    <p-message severity="error" text="Situação do vínculo obrigatório" *ngIf="
+                    <p-message severity="error" text="Situação da ocupação obrigatória" *ngIf="
                         formOcupacoesDeCargo.controls['situacao'].errors?.required &&
                         formOcupacoesDeCargo.controls['situacao'].touched">
                     </p-message>
@@ -97,7 +97,7 @@
             </div>
         </div>    
         <div class="p-grid p-jc-end">
-            <button pButton type="submit" label="Salvar" pTooltip="Salvar registro de servidor"
+            <button pButton type="submit" label="Salvar" pTooltip="Salvar registro de ocupação"
                 [disabled]="!valid()">
             </button>
         </div>
