corrigir campo de ocupacoes em servidores - BASIS-220352

--- a/frontend/src/app/seguranca/components/servidores/formulario-servidor/formulario-servidor.component.html
+++ b/frontend/src/app/seguranca/components/servidores/formulario-servidor/formulario-servidor.component.html
@@ -117,7 +117,7 @@
             <div class="p-col-12 p-grid">
                 <div class="p-md-3 p-sm-12">
                     <span class="p-float-label">
-                        <p-dropdown [options]="ocupacao" [optionLabel]="'valor'" [optionValue]="'id'"
+                        <p-dropdown [options]="ocupacaoDeCargos" [optionLabel]="'descricao'" [optionValue]="'id'"
                             formControlName="ocupacao"></p-dropdown>
                         <label>Ocupação</label>
                     </span>
