--- a/frontend/src/app/seguranca/components/servidores/servidores.component.html
+++ b/frontend/src/app/seguranca/components/servidores/servidores.component.html
@@ -53,7 +53,7 @@
 
         <div class="p-grid">
             <div class="p-col-12 p-md-6 p-lg-3 p-float-label">
-                <p-dropdown [options]="ocupacao" [optionLabel]="'valor'" [optionValue]="'id'"></p-dropdown>
+                <p-dropdown [options]="ocupacaoDeCargos" [optionLabel]="'descricao'" [optionValue]="'id'"></p-dropdown>
                 <label>Ocupação</label>
             </div>
 
