corrigir titulos do modulo de seguranca - BASIS-220352

--- a/frontend/src/app/seguranca/components/servidores/servidores.component.html
+++ b/frontend/src/app/seguranca/components/servidores/servidores.component.html
@@ -1,4 +1,4 @@
-<h1>Servidores</h1>
+<h1>Segurança</h1>
 <div class="card">
     <h2 class="sub-title">Pesquisa Servidores</h2>
     <div class="p-md-12 p-d-inline">
