--- a/frontend/src/app/seguranca/components/graduacoes-de-servidores/graduacoes-de-servidores.component.html
+++ b/frontend/src/app/seguranca/components/graduacoes-de-servidores/graduacoes-de-servidores.component.html
@@ -1,1 +1,28 @@
-<p>graduacoes-de-servidores works!</p>
+<h1>Segurança</h1>
+
+<div class="card">
+    <div class="p-md-12">
+        <h2 class="sub-title">Pesquisar Graduações do Servidor</h2>
+        <div class="p-col-12 p-grid">
+            <div class="p-col-12 p-md-4">
+                <span class="p-float-label">
+                    <p-dropdown [options]="matriculaDoServidor" >
+                    </p-dropdown>
+                    <label>Matrícula</label>
+                </span>
+            </div>
+            <div class="p-col-12 p-md-4">
+                <span class="p-float-label">
+                    <input type="text" pInputText disabled />
+                    <label>Vínculo</label>
+                </span>
+            </div>
+            <div class="p-col-12 p-md-4">
+                <span class="p-float-label">
+                    <input type="text" pInputText disabled />
+                    <label>Nome</label>
+                </span>
+            </div>            
+        </div>
+    </div>
+</div>
