Alterar sinonimos de exames-BASIS-219536

--- a/frontend/src/app/exames/components/exames-form/exames-form.component.html
+++ b/frontend/src/app/exames/components/exames-form/exames-form.component.html
@@ -3,10 +3,10 @@
             <p-tabPanel header="Cadastro de Exames">
                 <app-formulario-exame></app-formulario-exame>
             </p-tabPanel>
-            <p-tabPanel header="Sinonimo de Exames">
+            <p-tabPanel header="Sinônimos de Exames">
                 <app-sinonimos-exames> </app-sinonimos-exames>
             </p-tabPanel>
-            <p-tabPanel header="Matérial de Análise">
+            <p-tabPanel header="Materiais de Análise">
                 <app-cadastrar-material></app-cadastrar-material>
             </p-tabPanel>
         </p-tabView>
