--- a/frontend/src/app/exames/components/formulario-exame/formulario-exame.component.css
+++ b/frontend/src/app/exames/components/formulario-exame/formulario-exame.component.css
@@ -19,3 +19,9 @@
     display: flex;
     flex-direction: column;
 }
+
+.label {
+    display: flex;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
