trocar os id table de sinonimos de exames-BASIS-219536

--- a/frontend/src/app/exames/components/sinonimos-exames/sinonimos-exames.component.html
+++ b/frontend/src/app/exames/components/sinonimos-exames/sinonimos-exames.component.html
@@ -14,7 +14,7 @@
                     ></p-dropdown>
                     </span> 
                   </div>
-                  <div id="table">
+                  <div class="table">
                   <basis-datatable id="table"
                         #datatable
                         type="server"
@@ -45,7 +45,7 @@
                             </basis-datatable-button>  
                         </basis-datatable>
                     </div>
-        <div id="table">
+        <div class="table">
         <button pButton type="submit" label="Gravar" icon="ui-icon-search" bTooltip="Gravar Sinônimo de exames." 
           ></button>
         </div>
