--- a/frontend/src/app/exames/components/formulario-grade-de-agendamento/formulario-grade-de-agendamento.component.html
+++ b/frontend/src/app/exames/components/formulario-grade-de-agendamento/formulario-grade-de-agendamento.component.html
@@ -10,7 +10,7 @@
                 <span class="md-inputfield p-float-label" style="margin-top: 5px;">
                     <p-dropdown [options]="unidadesExecutoras" [optionLabel]="'nome'" [optionValue]="'id'" [filter]="true"
                         [resetFilterOnHide]="true" [showClear]="true" placeholder="Selecione"
-                        pTooltip="Informe a unidade executora." formControlName="unidadeExecutoraId">
+                        pTooltip="Informe a unidade executora" formControlName="unidadeExecutoraId">
                     </p-dropdown>
                 </span>
             </div>
@@ -20,7 +20,7 @@
                 <span class="md-inputfield p-float-label" style="margin-top: 5px;">
 
                     <p-dropdown [options]="" formControlName="ativo"[showClear]="true"
-                    pTooltip="Informe a Situação da grade de exames." 
+                    pTooltip="Informe a Situação da grade de exames" 
                     [options]="situacaoGrade" placeholder="Selecione"></p-dropdown>
                 </span>
             </div>
@@ -30,7 +30,7 @@
                 <span class="md-inputfield p-float-label" style="margin-top: 5px;">
                     <p-dropdown [options]="salas" [optionLabel]="'identificacaoDaSala'" [optionValue]="'id'" [filter]="true"
                         [resetFilterOnHide]="true" [showClear]="true" [(ngModel)]="salaSelecionada"
-                        pTooltip="Informe a unidade executora." placeholder="Selecione">
+                        pTooltip="Informe o código ou número da sala" placeholder="Selecione">
                     </p-dropdown>
                 </span>
             </div>
@@ -43,7 +43,7 @@
                 <span class="md-inputfield p-float-label" style="margin-top: 5px;">
                     <p-dropdown [options]="gruposDeExame" [optionLabel]="'nome'" [optionValue]="'id'" [filter]="true"
                         [resetFilterOnHide]="true" [showClear]="true" formControlName="grupoAgendamentoExameId"
-                        pTooltip="Informe a unidade executora." placeholder="Selecione">
+                        pTooltip="Informe o código ou descrição do grupo de exames" placeholder="Selecione">
                     </p-dropdown>
                 </span>
             </div>
@@ -53,7 +53,7 @@
                 <span class="md-inputfield p-float-label" style="margin-top: 5px;">
                     <p-dropdown [options]="exames" [optionLabel]="'nome'" [optionValue]="'id'" [filter]="true"
                         [resetFilterOnHide]="true" [showClear]="true" [(ngModel)]="exameSelecionado"
-                        pTooltip="Informe a unidade executora." placeholder="Selecione">
+                        pTooltip="Informe o código ou descrição do exame" placeholder="Selecione">
                     </p-dropdown>
                 </span>
             </div>
@@ -63,7 +63,7 @@
                 <span class="md-inputfield p-float-label" style="margin-top: 5px;">
                     <p-dropdown [options]="pessoas" [optionLabel]="'nome'" [optionValue]="'id'" [filter]="true"
                         [resetFilterOnHide]="true" [showClear]="true" formControlName="responsavelId"
-                        pTooltip="Informe a unidade executora." placeholder="Selecione">
+                        pTooltip="Informe a matrícula ou o nome do responsável" placeholder="Selecione">
                     </p-dropdown>
                 </span>
             </div>           
