--- a/frontend/src/app/exames/components/formulario-exame/formulario-exame.component.html
+++ b/frontend/src/app/exames/components/formulario-exame/formulario-exame.component.html
@@ -109,12 +109,12 @@
 
                     </div>
 
-                    <div class="p-col-12 p-grid p-d-flex">
-                        <div class="p-md-2">
+                    <div class="p-grid p-d-flex">
+                        <div class="p-col">
                             <button pButton type="button" label="Salvar" icon="pi pi-save" (click)="cadastrar()"
                                 [disabled]="!valid()"></button>
                         </div>
-                        <div class="p-md-2">
+                        <div class="p-col">
                             <button pButton type="button" label="Limpar" icon="pi pi-times" (click)="limpar()"></button>
                         </div>
                     </div>
@@ -126,44 +126,47 @@
 
     <!-- MATERIAL MATERIALMATERIALMATERIALMATERIALMATERIAL -->
     <p-tabPanel header="Cadastrar Material de Análise de Exame">
-        <div class="card card-w-title" [formGroup]="cadastrarMaterial">
+        <div class="card card-w-title" [formGroup]="materialForm">
             <h1>Cadastro de Material de Exames</h1>
 
             <div class="p-grid">
                 <div class="p-col">
                     Material
                     <span style="margin-top: 5px;">
-                        <p-dropdown [(ngModel)]="x" [options]="x" [optionLabel]="'nome'" [optionValue]="'id'"
-                            [filter]="true" [resetFilterOnHide]="true" [showClear]="true"
+                        <p-dropdown formControlName="materialId" [options]="materiaisDeAnalise" [optionLabel]="'nome'"
+                            [optionValue]="'id'" [filter]="true" [resetFilterOnHide]="true" [showClear]="true"
                             pTooltip="Selecione o material">
                         </p-dropdown>
                     </span>
                 </div>
                 <div class="p-col">
                     Situação
-                    <span class="dropdownStyle" pTooltip="Selecione o estado atual do material de análise">
+                    <span class="dropdownStyle">
                         <p-dropdown [options]="atividade" placeholder="Selecione" formControlName="ativo"></p-dropdown>
                     </span>
                 </div>
                 <div class="p-col">
                     Natureza
-                    <span class="dropdownStyle" pTooltip="Selecione o estado atual do material de análise">
-                        <p-dropdown [options]="natureza" placeholder="Selecione" formControlName="natureza"></p-dropdown>
+                    <span class="dropdownStyle">
+                        <p-dropdown [options]="natureza" placeholder="Selecione" formControlName="natureza">
+                        </p-dropdown>
                     </span>
                 </div>
                 <div class="p-col">
                     Sumário de exames
-                    <span class="dropdownStyle" pTooltip="Selecione o estado atual do material de análise">
+                    <span class="dropdownStyle">
                         <p-dropdown [options]="sumario" placeholder="Selecione" formControlName="sumario"></p-dropdown>
                     </span>
                 </div>
                 <div class="p-col">
                     Permitir solicitação pós-alta:
                     <div class="radioButton radio">
-                        <p-radioButton formControlName="permiteSolicitacaoPosAlta" class="radioButton" value=true label="Sim">
+                        <p-radioButton formControlName="permiteSolicitacaoPosAlta" class="radioButton" value=true
+                            label="Sim">
                         </p-radioButton>
 
-                        <p-radioButton formControlName="permiteSolicitacaoPosAlta" class="radioButton" value=false label="Não">
+                        <p-radioButton formControlName="permiteSolicitacaoPosAlta" class="radioButton" value=false
+                            label="Não">
                         </p-radioButton>
 
                     </div>
@@ -220,10 +223,12 @@
                 <div class="p-col">
                     Exige informar o número de coletas:
                     <div class="radioButton radio">
-                        <p-radioButton formControlName="informaNumeroDeColetas" class="radioButton" value=true label="Sim">
+                        <p-radioButton formControlName="informaNumeroDeColetas" class="radioButton" value=true
+                            label="Sim">
                         </p-radioButton>
 
-                        <p-radioButton formControlName="informaNumeroDeColetas" class="radioButton" value=false label="Não">
+                        <p-radioButton formControlName="informaNumeroDeColetas" class="radioButton" value=false
+                            label="Não">
                         </p-radioButton>
 
                     </div>
@@ -231,10 +236,12 @@
                 <div class="p-col">
                     Deve gerar novo item de solicitação para coletas:
                     <div class="radioButton radio">
-                        <p-radioButton formControlName="geraItemDeSolicitacao" class="radioButton" value=true label="Sim">
+                        <p-radioButton formControlName="geraItemDeSolicitacao" class="radioButton" value=true
+                            label="Sim">
                         </p-radioButton>
 
-                        <p-radioButton formControlName="geraItemDeSolicitacao" class="radioButton" value=false label="Não">
+                        <p-radioButton formControlName="geraItemDeSolicitacao" class="radioButton" value=false
+                            label="Não">
                         </p-radioButton>
 
                     </div>
@@ -242,10 +249,12 @@
                 <div class="p-col">
                     Exige informar intervalo do cadastro de coletas:
                     <div class="radioButton radio">
-                        <p-radioButton formControlName="exigeIntervaloDeColeta" class="radioButton" value=true label="Sim">
+                        <p-radioButton formControlName="exigeIntervaloDeColeta" class="radioButton" value=true
+                            label="Sim">
                         </p-radioButton>
 
-                        <p-radioButton formControlName="exigeIntervaloDeColeta" class="radioButton" value=false label="Não">
+                        <p-radioButton formControlName="exigeIntervaloDeColeta" class="radioButton" value=false
+                            label="Não">
                         </p-radioButton>
 
                     </div>
@@ -253,10 +262,12 @@
                 <div class="p-col">
                     Exige Informar a região anatômica:
                     <div class="radioButton radio">
-                        <p-radioButton formControlName="exigeRegiaoAnatomica" class="radioButton" value=true label="Sim">
+                        <p-radioButton formControlName="exigeRegiaoAnatomica" class="radioButton" value=true
+                            label="Sim">
                         </p-radioButton>
 
-                        <p-radioButton formControlName="exigeRegiaoAnatomica" class="radioButton" value=false label="Não">
+                        <p-radioButton formControlName="exigeRegiaoAnatomica" class="radioButton" value=false
+                            label="Não">
                         </p-radioButton>
 
                     </div>
@@ -267,10 +278,12 @@
                 <div class="p-col">
                     Exige Informar se o paciente ingere medicamento:
                     <div class="radioButton radio">
-                        <p-radioButton formControlName="ingestaoDeMedicamento" class="radioButton" value=true label="Sim">
+                        <p-radioButton formControlName="ingestaoDeMedicamento" class="radioButton" value=true
+                            label="Sim">
                         </p-radioButton>
 
-                        <p-radioButton formControlName="ingestaoDeMedicamento" class="radioButton" value=false label="Não">
+                        <p-radioButton formControlName="ingestaoDeMedicamento" class="radioButton" value=false
+                            label="Não">
                         </p-radioButton>
 
                     </div>
@@ -339,7 +352,8 @@
                         <p-radioButton formControlName="limiteDeSolicitacao" class="radioButton" value=true label="Sim">
                         </p-radioButton>
 
-                        <p-radioButton formControlName="limiteDeSolicitacao"  class="radioButton" value=false label="Não">
+                        <p-radioButton formControlName="limiteDeSolicitacao" class="radioButton" value=false
+                            label="Não">
                         </p-radioButton>
 
                     </div>
@@ -371,10 +385,12 @@
                 <div class="p-col">
                     Necessita de informações complementares:
                     <div class="radioButton radio">
-                        <p-radioButton formControlName="exigeDadosComplementares" class="radioButton" value=true label="Sim">
+                        <p-radioButton formControlName="exigeDadosComplementares" class="radioButton" value=true
+                            label="Sim">
                         </p-radioButton>
 
-                        <p-radioButton formControlName="exigeDadosComplementares" class="radioButton" value=false label="Não">
+                        <p-radioButton formControlName="exigeDadosComplementares" class="radioButton" value=false
+                            label="Não">
                         </p-radioButton>
 
                     </div>
@@ -404,91 +420,85 @@
                     <label>Intervalo mínimo entre as solicitações</label>
                 </div>
                 <div class="p-col inputNumber">
-                    <p-dropdown
-                        [options]="unidadeDeTempoOptions"
-                        placeholder="unidade de tempo do intervalo minimo"
-                        formControlName="unidadeDeTempo"
-                    >
+                    <p-dropdown [options]="unidadeDeTempoOptions" placeholder="unidade de tempo do intervalo minimo"
+                        formControlName="unidadeDeTempo">
                     </p-dropdown>
                 </div>
 
                 <div class="p-col inputNumber p-float-label">
-                    
+
                     <input type="number" pInputText formControlName="validade">
                     <label>Dias até o vencimento do exame</label>
                 </div>
             </div>
             <div class="p-grid">
                 <div class="p-col inputNumber p-float-label">
-                    
+
                     <input type="number" pInputText formControlName="agendamentoMinimo">
                     <label>intervalo de tempo entre agendamentos</label>
                 </div>
                 <div class="p-col inputNumber p-float-label">
-                    
+
                     <input name="IMS" type="number" pInputText formControlName="tempoLimiteDaSolicitacao">
                     <label>tempo limite de solicitação</label>
                 </div>
                 <div class="p-col inputNumber p-float-label">
-                    <p-dropdown [options]="unidadeDeTempoOptions" placeholder="unidade de tempo da solicitaçãp" formControlName="unidadeDeTempoDaSolicitacao">
+                    <p-dropdown [options]="unidadeDeTempoOptions" placeholder="unidade de tempo da solicitaçãp"
+                        formControlName="unidadeDeTempoDaSolicitacao">
 
                     </p-dropdown>
                 </div>
 
                 <div class="p-col inputNumber p-float-label">
-                    
-                    <input type="number" pInputText >
+
+                    <input type="number" pInputText formControlName="numeroDeAmostras">
                     <label>Número de amostras possíveis</label>
                 </div>
             </div>
             <div class="p-grid">
                 <div class="p-col inputNumber p-float-label">
-                    
-                    <input type="number" pInputText [(ngModel)]="value1">
+
+                    <input type="number" pInputText formControlName="numeroDeAmostrasPadrao">
                     <label>Número de amostras padrão</label>
                 </div>
                 <div class="p-col inputNumber p-float-label">
-                     
-                    <input name="IMS" type="number" pInputText [(ngModel)]="value1">
+
+                    <input name="IMS" type="number" pInputText formControlName="diasLimiteDefault">
                     <label>Tempo padrão para solicitar amostras (dias)</label>
                 </div>
                 <div class="p-col inputNumber p-float-label">
-                    
-                    <input type="number" pInputText [(ngModel)]="value1">
-                    <label>tempo padrãoo para solicitar amostras (horas)</label>
+
+                    <input type="number" pInputText formControlName="tempoLimiteDefault">
+                    <label>tempo padrão para solicitar amostras (horas)</label>
                 </div>
                 <div class="p-col inputNumber p-float-label">
-                    
-                    <input type="number" pInputText [(ngModel)]="value1">
+
+                    <input type="number" pInputText formControlName="numeroDeAmostrarPorIntervalo">
                     <label>Limite de amostras por intervalo</label>
                 </div>
             </div>
             <div class="p-grid">
                 <div class="p-col inputNumber p-float-label">
-                    <p-dropdown [options]="unidadeDeTempoOptions" placeholder="Unidade de tempo do período" formControlName="unidadeLimiteDeTempoDoPeriodo">
+                    <p-dropdown [options]="unidadeDeTempoOptions" placeholder="Unidade de tempo do período"
+                        formControlName="unidadeLimiteDeTempoDoPeriodo">
 
                     </p-dropdown>
                 </div>
-                <div class="p-col">
-                    Permite solicitação pós-alta
-                    <div class="radioButton radio">
-                        <p-radioButton class="radioButton" value=true label="Sim">
-                        </p-radioButton>
-
-                        <p-radioButton class="radioButton" value=false label="Não">
-                        </p-radioButton>
-
-                    </div>
-                </div>
                 <div class="p-col inputNumber p-float-label">
-                    
-                    <input type="number" pInputText [(ngModel)]="value1">
+
+                    <input type="number" pInputText formControlName="tempoPermitidoParaSolicitarPosAlta">
                     <label>Tempo para solicitar exame pós-alta</label>
                 </div>
                 <div class="p-col inputNumber p-float-label">
-                    
-                    <input type="number" pInputText [(ngModel)]="value1">
+
+                    <input type="number" pInputText
+                        formControlName="tempoPermitidoParaSolicitarPosAltaPelasAreasExecutoras">
                     <label>Tempo para solicitar exame pela área executora</label>
+                </div>
+                <div class="p-col inputNumber p-float-label">
+
+                    <input type="number" pInputText formControlName="tempoLimiteDeAmostraPorIntervalo">
+                    <label>Tempo Limite de amostra por intervalo</label>
                 </div>
             </div>
 
@@ -496,17 +506,20 @@
 
             <div class="p-grid">
                 <div class="p-col">
-                    <p-dropdown>
-                        
+                    <p-dropdown [options]="booleanDropdown" placeholder="Emite carta de coleta"
+                        formControlName="cartaDeColeta">
+
                     </p-dropdown>
                 </div>
                 <div class="p-col">
-                    Labolatório terceirizado?
+                    Laboratório terceirizado?
                     <div class="radioButton radio">
-                        <p-radioButton class="radioButton" value=true label="Sim">
+                        <p-radioButton formControlName="laboratorioTercerizado" class="radioButton" value=true
+                            label="Sim">
                         </p-radioButton>
 
-                        <p-radioButton class="radioButton" value=false label="Não">
+                        <p-radioButton formControlName="laboratorioTercerizado" class="radioButton" value=false
+                            label="Não">
                         </p-radioButton>
 
                     </div>
@@ -514,10 +527,12 @@
                 <div class="p-col">
                     cancela exame pós-alta
                     <div class="radioButton radio">
-                        <p-radioButton class="radioButton" value=true label="Sim">
+                        <p-radioButton formControlName="naoCancelaExameAposAlta" class="radioButton" value=true
+                            label="Sim">
                         </p-radioButton>
 
-                        <p-radioButton class="radioButton" value=false label="Não">
+                        <p-radioButton formControlName="naoCancelaExameAposAlta" class="radioButton" value=false
+                            label="Não">
                         </p-radioButton>
 
                     </div>
@@ -526,7 +541,15 @@
             </div>
         </div>
 
-        <h1>Salvar</h1> <h1>Cancelar</h1>
+        <div class="p-grid p-d-flex">
+            <div class="p-col">
+                <button pButton type="button" label="Salvar" icon="pi pi-save" (click)="cadastrarMaterial()"
+                    [disabled]="!validarMaterial()"></button>
+            </div>
+            <div class="p-col">
+                <button pButton type="button" label="Limpar" icon="pi pi-times" (click)="limparMaterial()"></button>
+            </div>
+        </div>
 
     </p-tabPanel>
 
